--- a/regressions/package.json
+++ b/regressions/package.json
@@ -7,11 +7,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tensorflow/tfjs-node": "^0.1.17",
-    "lodash": "^4.17.11",
+    "@tensorflow/tfjs-node": "^3.6.1",
+    "@tensorflow/tfjs-node-gpu": "^3.6.1",
+    "lodash": "^4.17.21",
     "memoize": "^0.1.1",
     "mnist-data": "^1.2.6",
-    "node-remote-plot": "^1.2.0",
+    "node-remote-plot": "^1.3.0",
     "shuffle-seed": "^1.1.6"
   }
 }
