--- a/regressions/package.json
+++ b/regressions/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^3.6.1",
     "@tensorflow/tfjs-node-gpu": "^3.6.1",
+    "colors": "1.4.0",
     "lodash": "^4.17.21",
     "memoize": "^0.1.1",
     "mnist-data": "^1.2.6",
